--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -11,17 +11,12 @@
     position: absolute;
     top: 0;
     left: 0;
-}
-
-.tile {
-    width: 50px;
-    height: 50px;
-    border: 1px solid gray;
+    touch-action: none;
 }
 
 .tileOverlay {
-    width: 50px;
-    height: 50px;
+    width: var(--tile-size);
+    height: var(--tile-size);
     border: 1px solid red;
 }
 
