--- a/src/components/Sprites/Sprites.module.css
+++ b/src/components/Sprites/Sprites.module.css
@@ -1,5 +1,5 @@
 .tile {
-    width: 50px;
-    height: 50px;
+    width: var(--tile-size);
+    height: var(--tile-size);
     border: 1px solid gray;
 }
