adjust to 7x7, resizing of screen

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,17 @@
 @import './reset.css';
 
+/* OVERRIDES */
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: black;
+}
+
 /* FLEX */
 .d-flex {
   display: flex;
